--- a/Api/bin/Api.dll.config
+++ b/Api/bin/Api.dll.config
@@ -9,8 +9,12 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=ENG_MOHAMEDYEHI\SQLEXPRESS;Initial Catalog=ApiDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet.mdf;Initial Catalog=aspnet;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
+   <!--<connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=ENG_MOHAMEDYEHI\SQLEXPRESS;Initial Catalog=ApiDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ElecEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ENG_MOHAMEDYEHI\SQLEXPRESS;initial catalog=Elec;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>-->
   <appSettings></appSettings>
   <system.web>
     <authentication mode="None" />
